# Escalate

./: .gitignore  README.md
cli/: README.md  pyproject.toml
cli/escalate/: __init__.py  api.py  cli.py  config.py  install.py  render.py
cli/escalate/data/: SKILL.md
cli/rentoleh/: __init__.py  api.py  cli.py  render.py
cli/tests/: mock_backend.py  test_cli.py
fe/: .env.example  API.md  README.md  SETUP_TELEGRAM.md  docker-compose.yml  package-lock.json  package.json
fe/app/: globals.css  layout.tsx  page.tsx
fe/app/api/ask/: route.ts
fe/app/api/messages/: route.ts
fe/app/api/messages/[id]/: route.ts
fe/app/api/messages/[id]/respond/: route.ts
fe/app/api/telegram/: route.ts
fe/app/landing/: page.tsx
fe/app/olehdashboard/: page.tsx
fe/components/dashboard/: oleh-dashboard.tsx
fe/components/landing/: claude-code-session.tsx  cmdbox.tsx  features.tsx  final-cta.tsx  flags.ts  footer.tsx  hero.tsx  how-it-works.tsx  install-bar.tsx  meet-oleh.tsx  nav.tsx  primitives.tsx  problem.tsx  reveal.tsx
fe/components/ui/: badge.tsx  button.tsx
fe/db/: init.sql  schema.sql
fe/lib/: config.ts  db.ts  ratelimit.ts  telegram.ts
skill/: SKILL.md
