[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rentoleh"
description = "CLI for asking Oleh a question and waiting for his answer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
dynamic = ["version"]

[project.scripts]
rentoleh = "rentoleh.cli:main"

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "types-requests"]

[tool.setuptools]
packages = ["rentoleh"]

[tool.setuptools.dynamic]
version = { attr = "rentoleh.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
strict = true
