[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "escalate-to-human"
description = "CLI for escalating a question to a human and waiting for their answer"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["requests>=2.28"]
dynamic = ["version"]

[project.scripts]
escalate = "escalate.cli:main"

[dependency-groups]
dev = ["ruff", "mypy", "pytest", "types-requests"]

[tool.setuptools]
packages = ["escalate"]

[tool.setuptools.package-data]
escalate = ["data/SKILL.md"]

[tool.setuptools.dynamic]
version = { attr = "escalate.__version__" }

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.mypy]
strict = true
